# graylog-to-grafana

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Readme.md
src/: grafana.rs  graylog.rs  main.rs
