[package]
name = "graylog-to-grafana"
description = "This tool can convert Graylog dashboards into Grafana dashboards."
version = "0.2.1"
authors = ["jan.jansen <jan.jansen@gdata.de>"]
edition = "2018"
license = "MIT"
keywords = ["graylog", "grafana"]
repository = "https://github.com/GDATASoftwareAG/graylog-to-grafana"
readme = "README.md"

[badges]
travis-ci = { repository = "GDATASoftwareAG/graylog-to-grafana" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.9"
log = "0.4"
env_logger = "0.6"
url = "1.7.2"